--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -1,4 +1,3 @@
-// @import "../base/variables";
 header{
     background: $color-secundario;
     width: 100%;
@@ -13,19 +12,28 @@ header{
     flex-wrap: wrap;
     grid-area: header;
     z-index: 10;
-    .navbar{
-        padding: 0;
-        .container-fluid{
+    .navegacion{
+        .navbar{
             padding: 0;
-            background-color: $color-secundario;
-            .collapse{
-                .navbar-nav{
-                    .nav-item{
+            .container-fluid{
+                padding: 0;
+                background-color: $color-secundario;
+                .collapse{
+                    .navbar-nav{
+                        list-style: none;
                         padding: 0;
-                        .nav-link{
-                            color: $color-terciario;
-                            &:hover{
-                                color: $color-principal;
+                        margin: 0;
+                        .nav-item{
+                            padding: 0;
+                            margin: 5px 25px 5px 25px;
+                            .nav-link{
+                                font-family: 'Times New Roman', Times, serif;
+                                font-size: nth($font-size, 2);
+                                font-style: italic;
+                                color: $color-terciario;
+                                &:hover{
+                                    color: $color-principal;
+                                }
                             }
                         }
                     }
@@ -33,43 +41,26 @@ header{
             }
         }
     }
-    a{
-        text-decoration: none;
-        flex-direction: row;
-        @extend %flex;
-        text-decoration: none;
-        color: $color-terciario;
-        font-family: 'Times New Roman', Times, serif;
-        font-style: italic;
-        img{
-            height: 80px;
-            position: absolute;
-            left: 25px;
-        }
-        &:hover{
-            color: $color-principal;
-        }
-        h1{
-            font-size: nth($font-size, 4);
-            margin: 0 0 0 85px;
-            span{
+    .logo-inicio{
+        a{
+            text-decoration: none;
+            @extend %flex;
+            color: $color-terciario;
+            font-family: 'Times New Roman', Times, serif;
+            font-style: italic;
+            img{
+                height: 80px;
+                position: absolute;
+                left: 25px;
+            }
+            &:hover{
                 color: $color-principal;
             }
-        }
-    }
-    nav{
-        ul{
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            li{
-                display: inline-block;
-                padding: 8px;
-                margin: 5px 25px 5px 25px;
-                a{
-                    font-family: 'Times New Roman', Times, serif;
-                    font-size: nth($font-size, 2);
-                    font-style: italic;
+            h1{
+                font-size: nth($font-size, 4);
+                margin: 0 0 0 85px;
+                span{
+                    color: $color-principal;
                 }
             }
         }
