--- a/scss/base/_mediaquery.scss
+++ b/scss/base/_mediaquery.scss
@@ -61,21 +61,18 @@
 }
 
 @media screen and (max-width:991px){
-    .grid-container{
-        display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 90px auto 300px;
-        grid-template-areas: 
-        "header header header"
-        "main main main"
-        "footer footer footer";
-    }
     header{
-        flex-direction: column;
-        justify-content: safe;
+        align-items: unset;
+        padding: 33px 25px 33px 25px;
     }
-    header .logo-inicio a h1{
-        margin: 0px 0px 0px 0px;
+    header .navegacion .navbar .container-fluid .collapse .navbar-nav .nav-item{
+        width: 90px;
+        margin: 5px;
+    }
+    header .navegacion .navbar .container-fluid .collapse .navbar-nav .nav-item .nav-link{
+        width: 90px;
+        margin: 0;
+        padding: 5px;
     }
 }
 
@@ -157,6 +154,9 @@
 }
 
 @media screen and (max-width:541px) {
+    header .navegacion .navbar .container-fluid{
+        width: 100px;
+    }
     header .logo-inicio a h1 {
         font-size: 25px;
         margin-left: 50px;
